/chat has fixed div for chat window (temp green border) with scrollbars that scroll down auto after every message

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -7,3 +7,10 @@ body {
 ul {
 	list-style-type: none;
 }
+
+#chat {
+	width:100%;
+	height:350px;
+	overflow-y:auto;
+	border:1px solid green;
+}
